--- a/docs/examples/partials/transfer-activity-expanded.html
+++ b/docs/examples/partials/transfer-activity-expanded.html
@@ -7,7 +7,7 @@
 	</transfer-details>
 	<div class="row">
 		<div class="col-sm-12 col-lg-3 m-b-0">
-			<a class="" href="">
+			<a class="" href="/examples/details.html">
 				View details
 			</a>
 			<!--
