--- a/less/column-layout.less
+++ b/less/column-layout.less
@@ -95,7 +95,7 @@
     height: 0;
     opacity: 0;
     transition: opacity 0.35s ease;
-    background-color: @brand-navy;
+    background-color: @brand-navy-minus-20;
     cursor: pointer;
     z-index: @zindex-mobile-nav-background;
   }
