--- a/less/dropdowns.less
+++ b/less/dropdowns.less
@@ -85,7 +85,7 @@
 
 .dropdown-menu,
 .btn-group .dropdown-menu  {
-  max-width: calc(100vw - 24px);
+  max-width: ~"calc(100vw - 32px)";
   &.dropdown-menu-sm {
     width: 220px;
   }
