--- a/less/variables.less
+++ b/less/variables.less
@@ -1158,7 +1158,8 @@
 @sequence-step-height: 24px;
 @sequence-margin: 16px;
 @sequence-margin-lg: 24px;
-@sequence-item-spacing: 4px;
+@sequence-item-spacing-sm: 2px;
+@sequence-item-spacing-md: 4px;
 @sequence-item-spacing-lg: 12px;
 @sequence-pip-size: 8px;
 @sequence-line-width: 2px;
