--- a/docs/examples/scratch.css
+++ b/docs/examples/scratch.css
@@ -39,3 +39,14 @@
 .feature-tour-cover {
   z-index: 100;
 }
+
+@media (max-width: 576px) {
+  .row {
+    margin-right: -8px;
+    margin-left: -8px;
+  }
+  [class*="col-"] {
+    padding-right: 8px;
+    padding-left: 8px;
+  }
+}
