Drop nav-link style for nav-justified and nav-fill

--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -95,17 +95,16 @@
 //
 
 .nav-fill {
-  .nav-item,
-  .nav-link {
+  .nav-item {
     flex: 1 1 auto;
     text-align: center;
   }
 }
 
 .nav-justified {
-  .nav-item,
-  .nav-link {
-    flex: 1 1 100%;
+  .nav-item {
+    flex-basis: 0;
+    flex-grow: 1;
     text-align: center;
   }
 }
