--- a/scss/joblocal.scss
+++ b/scss/joblocal.scss
@@ -4,4 +4,4 @@
 // import custom components
 @import "custom/_dropdown";
 @import "custom/_media";
-@import "custom/_nav";
+@import "custom/_navbar";
