--- a/scss/_tables.scss
+++ b/scss/_tables.scss
@@ -152,3 +152,25 @@
     border: 0;
   }
 }
+
+
+// Flush Table
+//
+// Remove borders and border-radius to keep list group items edge-to-edge. Most
+// useful within other components (e.g., cards).
+
+.table-flush {
+  margin: 0;
+  border-top: $card-border-width solid $card-border-color;
+
+  // generally clear top border for tr. Border handling will be done by parent table in card context
+  tr:first-child td,
+  tr:first-child th {
+    border-top: 0;
+  }
+
+  // clear top border if table is first child in the card
+  &:first-child {
+    border-top: 0;
+  }
+}
