--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -11,3 +11,6 @@
 @import "utilities/spacing";
 @import "utilities/text";
 @import "utilities/visibility";
+
+// Custom
+@import "utilities/shadows";
