--- a/scss/_tables.scss
+++ b/scss/_tables.scss
@@ -156,8 +156,7 @@
 
 // Flush Table
 //
-// Remove borders and border-radius to keep list group items edge-to-edge. Most
-// useful within other components (e.g., cards).
+// Remove borders on the top to display table in company with other components
 
 .table-flush {
   margin: 0;
