separates font-size adjustment from general component

--- a/scss/custom/_navbar.scss
+++ b/scss/custom/_navbar.scss
@@ -3,7 +3,6 @@
 .navbar-inverse {
   .navbar-nav {
     .nav-link {
-      font-size: $small-font-size;
       color: $navbar-inverse-link-color;
 
       @include hover-focus {
@@ -23,5 +22,19 @@
        background-color: transparent;
       }
     }
+  }
+}
+
+// Separate the font-size adjustment from the general component
+.navbar-sm {
+  font-size: $small-font-size;
+
+  .navbar-brand {
+    font-size: 1.25em; // TODO solve this in a more solid way
+  }
+
+  .btn,
+  .form-control {
+    font-size: 1em; // inherits parent font size
   }
 }
