--- a/scss/joblocal.scss
+++ b/scss/joblocal.scss
@@ -1,3 +1,6 @@
+// Adds Webfont
+@import url('https://fonts.googleapis.com/css?family=Fira+Sans:200,400,400i,600,600i');
+
 // import bootstrap components
 @import "bootstrap";
 
