--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -261,47 +261,49 @@ $grid-gutter-widths: (
 //
 // Font, line-height, and color for body text, headings, and more.
 
-$font-family-sans-serif: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif !default;
+$font-family-sans-serif: 'Fira Sans', -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif !default;
 $font-family-monospace:  Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace !default;
 $font-family-base:       $font-family-sans-serif !default;
 
-$font-size-base: 1rem !default; // Assumes the browser default, typically `16px`
-$font-size-lg:   1.25rem !default;
-$font-size-sm:   .875rem !default;
-$font-size-xs:   .75rem !default;
+$font-size-base: .875rem; // Assumes the browser default, typically `1rem = 16px` ~ 14px
+$font-size-xl:   1.25rem; // ~ 20px - for body large buttons
+$font-size-lg:   1rem; // ~ 16px - for body text in WYSIWIG
+$font-size-sm:   .75rem; // ~ 12px - our small font size
+$font-size-xs:   .625rem; // ~ 10px - not used atm, use to hide something
 
-$font-weight-normal: normal !default;
-$font-weight-bold: bold !default;
+$font-weight-normal: 400;  // ~ Fira Regular
+$font-weight-bold: 600; // ~ Fira Semibold 
+$font-weight-light: 200; // ~ Fira Light, used in Small Headline and Hero, maybe we can live without it
 
 $font-weight-base: $font-weight-normal !default;
 $line-height-base: 1.5 !default;
 
-$font-size-h1: 2.5rem !default;
-$font-size-h2: 2rem !default;
-$font-size-h3: 1.75rem !default;
-$font-size-h4: 1.5rem !default;
-$font-size-h5: 1.25rem !default;
+$font-size-h1: 1.5rem; // ~ 24px
+$font-size-h2: 1.125rem; // ~ 18px
+$font-size-h3: 1rem; // ~ 16px
+$font-size-h4: .875rem; // ~ 14px
+$font-size-h5: .75rem; // ~ 12px - our small font size
 $font-size-h6: 1rem !default;
 
-$headings-margin-bottom: ($spacer / 2) !default;
+$headings-margin-bottom: 1rem;
 $headings-font-family:   inherit !default;
-$headings-font-weight:   500 !default;
+$headings-font-weight:   $font-weight-bold;
 $headings-line-height:   1.1 !default;
 $headings-color:         inherit !default;
 
-$display1-size: 6rem !default;
+$display1-size: 2.5rem;
 $display2-size: 5.5rem !default;
 $display3-size: 4.5rem !default;
 $display4-size: 3.5rem !default;
 
-$display1-weight:     300 !default;
-$display2-weight:     300 !default;
-$display3-weight:     300 !default;
-$display4-weight:     300 !default;
+$display1-weight:     $font-weight-light;
+$display2-weight:     $font-weight-light;
+$display3-weight:     $font-weight-light;
+$display4-weight:     $font-weight-light;
 $display-line-height: $headings-line-height !default;
 
 $lead-font-size:   1.25rem !default;
-$lead-font-weight: 300 !default;
+$lead-font-weight: $font-weight-light;
 
 $small-font-size: 80% !default;
 
