--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -378,7 +378,7 @@ $table-border-color:            $gray-lighter !default;
 
 $btn-padding-x:                  1rem !default;
 $btn-padding-y:                  .5rem !default;
-$btn-line-height:                1.25 !default;
+$btn-line-height:                1.5;
 $btn-font-weight:                $font-weight-normal !default;
 $btn-box-shadow:                 inset 0 1px 0 rgba($white,.15), 0 1px 1px rgba($black,.075) !default;
 $btn-focus-box-shadow:           0 0 0 2px rgba($brand-primary, .25) !default;
@@ -416,14 +416,18 @@ $btn-padding-y-sm:               .25rem !default;
 $btn-padding-x-lg:               1.5rem !default;
 $btn-padding-y-lg:               .75rem !default;
 
+$btn-padding-x-xl:               1.5em;
+$btn-padding-y-xl:               1em;
+
 $btn-block-spacing-y:            .5rem !default;
 
 // Allows for customizing button radius independently from global border radius
 $btn-border-radius:              $border-radius !default;
-$btn-border-radius-lg:           $border-radius-lg !default;
-$btn-border-radius-sm:           $border-radius-sm !default;
+$btn-border-radius-xl:           $border-radius-lg;
+$btn-border-radius-lg:           $border-radius;
+$btn-border-radius-sm:           $border-radius;
 
-$btn-transition:                 all .2s ease-in-out !default;
+$btn-transition:                 all .1s ease-in-out !default;
 
 
 // Forms
