--- a/scss/custom/_buttons.scss
+++ b/scss/custom/_buttons.scss
@@ -6,3 +6,14 @@
   // line-height: ensure even-numbered height of button next to large input
   @include button-size($btn-padding-y-xl, $btn-padding-x-xl, $font-size-xl, $btn-border-radius-xl);
 }
+
+//
+// Alternate buttons
+//
+
+// CTA Variant, can be paired with a color
+.btn-cta {
+  // This solution only works in all browsers except ALL IE's - I chose this solution as I book this as progressive enhancement. It's a standard spec, no user dies if the gradient is not present. TBD
+  @include gradient-y(rgba(0,0,0,0), rgba(0,0,0,0.3));
+  background-blend-mode: overlay;
+}
