--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -380,7 +380,7 @@ $btn-padding-x:                  1rem;
 $btn-padding-y:                  .5rem;
 $btn-line-height:                1.25;
 $btn-font-weight:                $font-weight-normal !default;
-$btn-box-shadow:                 inset 0 1px 0 rgba($white,.15), 0 1px 1px rgba($black,.075) !default;
+$btn-box-shadow:                 none;
 $btn-focus-box-shadow:           0 0 0 2px rgba($brand-primary, .25) !default;
 $btn-active-box-shadow:          inset 0 3px 5px rgba($black,.125) !default;
 
