--- a/scss/_forms.scss
+++ b/scss/_forms.scss
@@ -98,6 +98,7 @@ select.form-control {
   padding-top: calc(#{$input-padding-y} - #{$input-btn-border-width} * 2);
   padding-bottom: calc(#{$input-padding-y} - #{$input-btn-border-width} * 2);
   margin-bottom: 0; // Override the `<label>` default
+  text-align: right;
 }
 
 .col-form-label-lg {
