--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -13,6 +13,7 @@
 
 <script src="{{ site.cdn.jquery }}" integrity="{{ site.cdn.jquery_hash }}" crossorigin="anonymous"></script>
 <script>window.jQuery || document.write('<script src="{{ site.baseurl }}/assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
+<script>window.slick || document.write('<script src="{{ site.baseurl }}/assets/js/vendor/slick.min.js"><\/script>')</script>
 
 <script src="{{ site.baseurl }}/assets/js/vendor/tether.min.js"></script>
 
