--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -223,7 +223,7 @@ $grid-breakpoints: (
   sm: 576px,
   md: 768px,
   lg: 992px,
-  xl: 1200px
+  xl: 1280px
 ) !default;
 @include _assert-ascending($grid-breakpoints, "$grid-breakpoints");
 @include _assert-starts-at-zero($grid-breakpoints);
@@ -237,7 +237,7 @@ $container-max-widths: (
   sm: 540px,
   md: 720px,
   lg: 960px,
-  xl: 1140px
+  xl: 1224px
 ) !default;
 @include _assert-ascending($container-max-widths, "$container-max-widths");
 
@@ -247,12 +247,12 @@ $container-max-widths: (
 // Set the number of columns and specify the width of the gutters.
 
 $grid-columns:               12 !default;
-$grid-gutter-width-base:     30px !default;
+$grid-gutter-width-base:     24px !default;
 $grid-gutter-widths: (
-  xs: $grid-gutter-width-base,
-  sm: $grid-gutter-width-base,
-  md: $grid-gutter-width-base,
-  lg: $grid-gutter-width-base,
+  xs: 8px,
+  sm: 12px,
+  md: 16px,
+  lg: 20px,
   xl: $grid-gutter-width-base
 ) !default;
 
