--- a/scss/custom/_slider.scss
+++ b/scss/custom/_slider.scss
@@ -29,6 +29,16 @@ $slider-control-indicator-active-bg: $gray-dark;
   vertical-align: middle;
 }
 
+.slider-item-grid-spacing {
+  @each $breakpoint in map-keys($grid-gutter-widths) {
+    @include media-breakpoint-up($breakpoint) {
+      $gutter: map-get($grid-gutter-widths, $breakpoint);
+      padding-left: ($gutter / 2);
+      padding-right: ($gutter / 2);
+    }
+  }
+}
+
 // Controls
 .slider-controls {
   display: flex;
