adds slider arrows bootstrap style

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -973,8 +973,8 @@ $carousel-caption-color:                      $white !default;
 
 $carousel-control-icon-width:                 20px !default;
 
-$carousel-control-prev-icon-bg: str-replace(url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='#{$carousel-control-color}' viewBox='0 0 8 8'%3E%3Cpath d='M4 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E"), "#", "%23") !default;
-$carousel-control-next-icon-bg: str-replace(url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='#{$carousel-control-color}' viewBox='0 0 8 8'%3E%3Cpath d='M1.5 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E"), "#", "%23") !default;
+$carousel-control-prev-icon-bg: str-replace(url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='#{$carousel-control-color}' viewBox='0 0 44 44'%3E%3Cpath d='M21.07,17.07l1.07.91L20,20.35a6,6,0,0,1-1.12,1h8.47v1.28H18.86a4.58,4.58,0,0,1,1.12,1L22.14,26l-1.07.91L16.67,22Z'/%3E%3C/svg%3E"), "#", "%23") !default;
+$carousel-control-next-icon-bg: str-replace(url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='#{$carousel-control-color}' viewBox='0 0 44 44'%3E%3Cpath d='M22.93,26.93,21.86,26,24,23.65a6,6,0,0,1,1.12-1H16.67V21.36h8.47a4.58,4.58,0,0,1-1.12-1L21.86,18l1.07-.91L27.33,22Z'/%3E%3C/svg%3E"), "#", "%23") !default;
 
 $carousel-transition:           transform .6s ease-in-out !default;
 
@@ -1084,3 +1084,6 @@ $slider-control-indicator-spacing: $spacer-x * .25;
 $slider-control-indicator-bg: $gray-lighter;
 $slider-control-indicator-hover-bg: $gray-light;
 $slider-control-indicator-active-bg: $gray-dark;
+
+$slider-control-prev-icon-bg: $carousel-control-prev-icon-bg;
+$slider-control-next-icon-bg: $carousel-control-next-icon-bg;
