--- a/scss/custom/_slider.scss
+++ b/scss/custom/_slider.scss
@@ -44,17 +44,21 @@
 
 .slider-control-prev,
 .slider-control-next {
-  width: 1em;
-  height: 1em;
-  padding: 1em;
-  background-size: 100%;
+  box-sizing: border-box;
+  width: $slider-control-button-size;
+  height: $slider-control-button-size;
+  background-size: $slider-control-button-icon-size;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
-.slider-control-prev {
+.slider-control-prev,
+.slider-control-prev:active {
   background-image: $slider-control-prev-icon-bg;
 }
 
-.slider-control-next {
+.slider-control-next,
+.slider-control-next:active {
   background-image: $slider-control-next-icon-bg;
 }
 
