adjusts spacing, adds basic spacing documentation

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -180,8 +180,12 @@ $spacers: (
     y: ($spacer-y * 1.5)
   ),
   5: (
-    x: ($spacer-x * 3),
-    y: ($spacer-y * 3)
+    x: ($spacer-x * 2),
+    y: ($spacer-y * 2)
+  ),
+  6: (
+    x: ($spacer-x * 4),
+    y: ($spacer-y * 4)
   )
 ) !default;
 $border-width: 1px !default;
