adds nav-buttons, adds doc

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -689,6 +689,9 @@ $nav-pills-border-radius:     $border-radius !default;
 $nav-pills-active-link-color: $component-active-color !default;
 $nav-pills-active-link-bg:    $component-active-bg !default;
 
+// CUSTOM: Nav Buttons
+$nav-buttons-spacing-x: $spacer-x * .5;
+
 
 // Pagination
 
