Fix fluid width container in column layout (#97)
* Remove rule limiting fluid width containers in column layout.

--- a/less/column-layout.less
+++ b/less/column-layout.less
@@ -112,8 +112,7 @@
   overflow-y: auto;
 }
 
-.column-layout-main .container,
-.column-layout-main .container-fluid {
+.column-layout-main .container {
   // ensures we use the full width on default mac screen
   max-width: 1176px;
 }
