dropdown menu issue
if we use dropdown in navbar position:static; making problem.issue has been reported here

https://github.com/twbs/bootstrap/issues/22259

--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -138,7 +138,7 @@
       @include media-breakpoint-down($breakpoint) {
         .navbar-nav {
           .dropdown-menu {
-            position: static;
+            position: absolute;
             float: none;
           }
         }
