--- a/docs/_includes/nav-home.html
+++ b/docs/_includes/nav-home.html
@@ -25,7 +25,7 @@
     </nav>
     {% endcomment %}
 
-    <div class="d-flex justify-content-between d-lg-none">
+    <div class="display-flex justify-content-between display-lg-none">
       <a class="navbar-brand" href="{{ site.baseurl }}/">
         Bootstrap
       </a>
